--- a/src/coponents/Services/Services.css
+++ b/src/coponents/Services/Services.css
@@ -1,12 +1,34 @@
 
 .service-container{
+    width: 100%;
     margin-top: 30px;
     padding-bottom: 20px;
 }
 
 .service-cart{
-    margin: auto;
-    width: 75%;
+    margin-left: 4%;
+    width: 60%;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    grid-column-gap: 20px;
+}
+
+
+@media only screen and (max-width: 600px)  {
+    .service-cart{
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+    }
+}
+@media only screen and (max-width: 882px)  {
+    .service-cart{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+@media only screen and (min-width: 1200px)  {
+    .service-cart{
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+    }
 }
