--- a/src/coponents/Shared/Footer/Footer.css
+++ b/src/coponents/Shared/Footer/Footer.css
@@ -7,7 +7,7 @@
     background-color: #0A1929;
 }
 .footer-detail{
-    width: 75%;
+    width: 85%;
     display: flex;
     justify-content: space-between;
     margin: auto;
@@ -19,7 +19,7 @@
 }
 .footer-logo p{
     margin-top: 20px;
-    font-size: 19px;
+    font-size: 18px;
 }
 .footer-contact h2{
     margin-bottom: 30px;
@@ -36,4 +36,18 @@
     color: rgb(187, 185, 185);
     font-size: 45px;
     margin-right: 10px;
+}
+
+@media only screen and (max-width: 600px) {
+    .footer-logo{
+        width: 120px;
+    }
+    .footer-social{
+        margin-left: 15px;
+        width: 120px;
+    }
+    .footer-contact{
+        margin-left: 10px;
+        width: 120px;
+    }
 }
