--- a/src/coponents/ServiceDetail/ServiceDetail.css
+++ b/src/coponents/ServiceDetail/ServiceDetail.css
@@ -1,13 +1,22 @@
 .detail-container{
-    width: 450px;
     display: flex;
-    flex-direction: column;
-    margin: 50px auto;
-    border: 1px solid gainsboro;
+    justify-content: center;
     height: 430px;
+    margin: 50px 50px 0px 0px;
 }
-
 .detail-container img{
     width: 100%;
-    height: 250px;
+    height: 350px;
+}
+.service-bio{
+    line-height:30px;
+    width: 550px;
+    margin: 50px 0px 0px 50px;
+}
+.back-btn{
+    color: black;
+    text-decoration: none;
+    background-color: gainsboro;
+    padding: 5px 20px;
+    border-radius: 3px;
 }
