--- a/src/coponents/Shared/Header/Header.css
+++ b/src/coponents/Shared/Header/Header.css
@@ -1,15 +1,23 @@
 
-.header-detail{
+.header-container{
     display: flex;
     justify-content: space-between;
 }
+
 .header-detail{
     font-size: 20px;
     color: gainsboro;
     text-decoration: none;
-    padding: 10px 20px;
+    margin: 10px 15px;
+}
+.header-detail:hover{
+    color: orange;
+    padding: 0px 8px;
+    border:1px solid orange;
+    border-radius: 3px;
 }
 .signin-out{
+    margin-right: 50px;
     font-size: 20px;
     color: gainsboro;
     text-decoration: none;
