--- a/src/coponents/About/About.css
+++ b/src/coponents/About/About.css
@@ -1,6 +1,5 @@
 
 .about-container{
-    margin-top: 50px;
     display: flex;
 }
 
@@ -13,10 +12,17 @@
     height: 500px;
     border-radius: 20px;
 }
+@media only screen and (max-width: 600px) {
+    .about-img img{
+        margin-top: 20px;
+        width: 100%;
+        height: 280px;
+        border-radius: 20px;
+    }
+  }
 
 .about-detail{
     padding-top: 100px;
-    margin-left: 200px;
 }
 .about-detail h1{
     font-size: 40px;
@@ -27,6 +33,5 @@
 .about-detail p{
     margin-top: 50px;
     font-size: 18px;
-    width: 450px;
     font-family:Georgia, 'Times New Roman', Times, serif;
 }
