--- a/src/coponents/Services/Services.css
+++ b/src/coponents/Services/Services.css
@@ -1,34 +1,18 @@
 
 .service-container{
     width: 100%;
-    margin-top: 30px;
-    padding-bottom: 20px;
+    margin-top: 110px;
+    margin-bottom: 100px;
 }
 
 .service-cart{
-    margin-left: 4%;
-    width: 60%;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-column-gap: 20px;
+    width: 350px;
+    margin-right: 12px;
+    box-shadow: 2px 2px 2px 2px rgb(199, 199, 199);
+    padding: 0px 0px 20px 0px;
+    margin-top: 20px;
 }
-
-
-@media only screen and (max-width: 560px)  {
-    .service-cart{
-        display: grid;
-        grid-template-columns: repeat(1, 1fr);
-    }
-}
-@media only screen and (max-width: 882px)  {
-    .service-cart{
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-    }
-}
-@media only screen and (min-width: 1200px)  {
-    .service-cart{
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-    }
+.detail-info{
+    margin-top: 15px;
+    padding: 0px 10px;
 }
